tests/baselines/reference/es6ImportNamedImportInIndirectExportAssignment.errors.txt
es6ImportNamedImportInIndirectExportAssignment_0.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== es6ImportNamedImportInIndirectExportAssignment_0.ts (1 errors) ====
    export module a {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class c {
        }
    }
    
==== es6ImportNamedImportInIndirectExportAssignment_1.ts (0 errors) ====
    import { a } from "./es6ImportNamedImportInIndirectExportAssignment_0";
    import x = a;
    export = x;